(GERONIMO-3980) Use shitty-maven-plugin instead of maven-maven-plugin to drive test builds
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/trunk@653533 13f79535-47bb-0310-9956-ffa450edef68